# cioran

./: .gitignore  CMakeLists.txt
headers/: cioran-descriptors.h  cioran-images.h  cioran-vulkan.h
learnings/vulkan/: concepts.md  current-loop-flow.md  descriptors.md  issues-ive-experienced.md  pipeline-stages.md  textures.md
shaders/: gradient.comp
src/: cioran-descriptors.cpp  cioran-images.cpp  cioran.cpp  main.cpp
